--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@expo-google-fonts/scope-one": "^0.1.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
+    "jwt-decode": "^3.1.2",
     "link": "^0.1.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -27,7 +29,7 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "^0.17.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
