All good changements for the new system of LogIn and get the token

--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,7 @@
     "rules": {
       "no-console": "off",
       "object-shorthand": "off",
+      "no-shadow": ["error", { "allow": ["email", "mdp", "confMdp", "plat", "parts", "description", "dateLiv", "searchText"] }],
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
       "react/prop-types": "off",
