--- a/package.json
+++ b/package.json
@@ -16,19 +16,19 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "expo": "^42.0.3",
-    "expo-app-loading": "^1.0.1",
+    "expo-app-loading": "1.1.2",
     "expo-font": "^9.2.1",
-    "expo-status-bar": "~1.0.3",
+    "expo-status-bar": "~1.0.4",
     "jwt-decode": "^3.1.2",
     "link": "^0.1.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-keyboard-listener": "^1.1.0",
     "react-native-reanimated": "^2.2.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.2",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.17.1"
   },
